# YOLO_ALPR_Project

./: .gitignore  COLAB_DEBLUR_V2_E20_STEPS.md  COLAB_TRAINING_GUIDE.md  OBB_FINETUNE_COLAB.md  PROJECT_HANDOFF.md  alpr_sahi_snapshot.py  alpr_sahi_snapshot2.py  alpr_topk_capture.py  alpr_topk_capture_demo.py  annotate_obb_review.py  api_with_tracking.py  build_alpr_demo_report.py  cascade_stream.py  cascade_stream2.py  export_obb_review_pack.py  hyperlpr3_ocr.py  main.py  mipi_current_frame_probe.py  ocr_compare_topk.py  plate_rec_ocr.py  prepare_deblur_dataset.py  prepare_deblur_dataset_v2.py  prepare_obb_finetune_dataset.py  rk3588_mipi_isp_probe.py  rk3588_topk_capture.py  rk3588_topk_capture_mipi_debug.py  test_deblur_hyperlpr3.py  test_deblur_image.py  test_image.py  test_image2.py  topk_report.py  train_deblur_colab.py  train_obb_colab.py  代码截图.docx  各代码含义.docx  对话.docx  谷歌云盘模型含义.docx
My_models/: tiny_unet_best.pth
RK3588_dev/: CMakeCache.txt  CMakeLists.txt  convert_obb_640.py  convert_obb_640_fp16.py  dataset.txt  main.cpp  onnx_to_rknn.py  rknn_model_info.cpp
RK3588_dev/board_smoke_144_track2/: summary.json
RK3588_dev/mipi_current_probe_live/: summary.json
RK3588_dev/rk_adaptive_i3/run_20260626_063106/: run_summary.json
RK3588_dev/rk_baseline_no_reassoc/run_20260626_011239/: run_summary.json
RK3588_dev/rk_debug_1000/: run_summary.json
RK3588_dev/rk_debug_1000_fix/: run_summary.json
RK3588_dev/rk_hyperlpr_pre_dedup_i1/run_20260626_021058/: run_summary.json
RK3588_dev/rk_hyperlpr_pre_i2/run_20260626_020617/: run_summary.json
RK3588_dev/rk_noocr_plate_lock_ab/run_20260626_022443/: run_summary.json
RK3588_dev/rk_plate_predicted_i1/run_20260626_015820/: run_summary.json
RK3588_dev/rk_plate_predicted_i2/run_20260626_020124/: run_summary.json
RK3588_dev/rk_reassoc_1000/run_20260625_101657/: run_summary.json
RK3588_dev/run_20260626_074232/: run_summary.json
(+128 files in other folders)
